--- a/index.html
+++ b/index.html
@@ -480,15 +480,15 @@
 						<h3 class="d-flex align-items-center"><span class="me-1"><img src="images/envelope-outline.svg"
 									alt="Image" class="img-fluid"></span><span>Subscribe to Newsletter</span></h3>
 
-						<form action="#" class="row g-3">
+						<form id="formu" action="#" class="row g-3">
 							<div class="col-auto">
-								<input type="text" class="form-control" placeholder="Enter your name">
+								<input id="nombre" type="text" class="form-control" placeholder="Enter your name">
 							</div>
 							<div class="col-auto">
-								<input type="email" class="form-control" placeholder="Enter your email">
+								<input id="email" type="email" class="form-control" placeholder="Enter your email">
 							</div>
 							<div class="col-auto">
-								<button class="btn btn-primary">
+								<button id="submit" type="submit" class="btn btn-primary">
 									<span class="fa fa-paper-plane"></span>
 								</button>
 							</div>
