--- a/index.html
+++ b/index.html
@@ -488,6 +488,15 @@
 								<input id="email" type="email" class="form-control" placeholder="Enter your email">
 							</div>
 							<div class="col-auto">
+
+								<select id="select" name="marca" class="form-control">
+									<option value="Tu marca favorita de alimento">Tu marca favorita</option>
+									<option value="NutraPro">NutraPro</option>
+									<option value="Purina">Purina</option>
+									<option value="Royal Canin">Royal Canin</option>
+								</select>
+							</div>
+							<div class="col-auto">
 								<button id="submit" type="submit" class="btn btn-primary">
 									<span class="fa fa-paper-plane"></span>
 								</button>
