--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Untree.co">
-	<link rel="shortcut icon" href="favicon.png">
+	<link rel="shortcut icon" href="images/paw.png">
 
 	<meta name="description" content="" />
 	<meta name="keywords" content="bootstrap, bootstrap4" />
@@ -22,7 +22,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 	<link href="css/tiny-slider.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
+	<title>VetStop</title>
 
 	<script src="js/main.js"></script>
 </head>
@@ -33,7 +33,7 @@
 	<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Vetstop<span>.</span></a>
+			<a class="navbar-brand" href="index.html">VetStop<span>.</span></a>
 
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni"
 				aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,16 +45,16 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="index.html">Inicio</a>
 					</li>
-					<li><a class="nav-link" href="services.html">Servicios</a></li>
-					<li><a class="nav-link" href="shop.html">Accesorios</a></li>
-					<li><a class="nav-link" href="about.html">Nosotros</a></li>
-					<li><a class="nav-link" href="blog.html">Noticias</a></li>
-					<li><a class="nav-link" href="contact.html">Contáctanos</a></li>
+					<li><a class="nav-link" href="#servicios">Servicios</a></li>
+					<li><a class="nav-link" href="#accesorios">Accesorios</a></li>
+					<li><a class="nav-link" href="#productos">Productos</a></li>
+					<li><a class="nav-link" href="#comunidad">Comunidad</a></li>
+					<li><a class="nav-link" href="#contacto">Contáctanos</a></li>
 				</ul>
 
 				<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
 					<li><a class="nav-link" href="#"><img src="images/user.svg"></a></li>
-					<li><a class="nav-link" href="cart.html"><img src="images/cart.svg"></a></li>
+					<li><a class="nav-link" href=""><img src="images/cart.svg"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -68,16 +68,14 @@
 			<div class="row justify-content-between">
 				<div class="col-lg-5">
 					<div class="intro-excerpt">
-						<h1>Servicios veterinarios<span clsas="d-block">24/7</span></h1>
-						<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-							vulputate velit imperdiet dolor tempor tristique.</p>
-						<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#"
-								class="btn btn-white-outline">Explore</a></p>
+						<h1>Servicios veterinarios<span class="d-block">24/7</span></h1>
+						<p class="mb-4">Proporcionamos un cuidado integral y especializado, asegurando la salud y el bienestar de las mascotas.</p>
+						<p><a href="#servicios" class="btn btn-secondary me-2">Adquirir servicios</a>
 					</div>
 				</div>
 				<div class="col-lg-7">
 					<div class="hero-img-wrap">
-						<img src="images/couch.png" class="img-fluid">
+						<img src="images/dogs-principal.webp" class="img-fluid">
 					</div>
 				</div>
 			</div>
@@ -86,22 +84,22 @@
 	<!-- End Hero Section -->
 
 	<!-- Start Product Section -->
-	<div class="product-section">
+	<div class="product-section" id="servicios">
 		<div class="container">
 			<div class="row">
 
 				<!-- Start Column 1 -->
 				<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-					<h2 class="mb-4 section-title">Crafted with excellent material.</h2>
-					<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-						vulputate velit imperdiet dolor tempor tristique. </p>
-					<p><a href="shop.html" class="btn">Explore</a></p>
+					<h2 class="mb-4 section-title" >Servicios disponibles</h2>
+					<p class="mb-4">Ofrecemos una amplia gama de servicios para asegurar la salud 
+						y el bienestar de los animales. </p>
+					
 				</div>
 				<!-- End Column 1 -->
 
 				<!-- Start Column 2 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-					<a class="product-item" href="cart.html">
+					<a class="product-item" href="">
 						<img src="images/product-1.png" class="img-fluid product-thumbnail">
 						<h3 class="product-title">Nordic Chair</h3>
 						<strong class="product-price">$50.00</strong>
@@ -115,7 +113,7 @@
 
 				<!-- Start Column 3 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-					<a class="product-item" href="cart.html">
+					<a class="product-item" href="">
 						<img src="images/product-2.png" class="img-fluid product-thumbnail">
 						<h3 class="product-title">Kruzo Aero Chair</h3>
 						<strong class="product-price">$78.00</strong>
@@ -129,7 +127,7 @@
 
 				<!-- Start Column 4 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-					<a class="product-item" href="cart.html">
+					<a class="product-item" href="">
 						<img src="images/product-3.png" class="img-fluid product-thumbnail">
 						<h3 class="product-title">Ergonomic Chair</h3>
 						<strong class="product-price">$43.00</strong>
@@ -147,11 +145,11 @@
 	<!-- End Product Section -->
 
 	<!-- Start Why Choose Us Section -->
-	<div class="why-choose-section">
+	<div class="why-choose-section" id="accesorios">
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-lg-6">
-					<h2 class="section-title">Why Choose Us</h2>
+					<h2 class="section-title">Accesorios</h2>
 					<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit
 						imperdiet dolor tempor tristique.</p>
 
@@ -215,7 +213,7 @@
 	<!-- End Why Choose Us Section -->
 
 	<!-- Start We Help Section -->
-	<div class="we-help-section">
+	<div class="we-help-section" id="productos">
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-lg-7 mb-5 mb-lg-0">
@@ -226,7 +224,7 @@
 					</div>
 				</div>
 				<div class="col-lg-5 ps-lg-5">
-					<h2 class="section-title mb-4">We Help You Make Modern Interior Design</h2>
+					<h2 class="section-title mb-4">Productos</h2>
 					<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada.
 						Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque
 						habitant morbi tristique senectus et netus et malesuada</p>
@@ -407,11 +405,11 @@
 	<!-- End Testimonial Slider -->
 
 	<!-- Start Blog Section -->
-	<div class="blog-section">
+	<div class="blog-section"  id="comunidad">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md-6">
-					<h2 class="section-title">Recent Blog</h2>
+					<h2 class="section-title">Productos populares</h2>
 				</div>
 				<div class="col-md-6 text-start text-md-end">
 					<a href="#" class="more">View All Posts</a>
@@ -478,7 +476,7 @@
 				<div class="col-lg-8">
 					<div class="subscription-form">
 						<h3 class="d-flex align-items-center"><span class="me-1"><img src="images/envelope-outline.svg"
-									alt="Image" class="img-fluid"></span><span>Subscribe to Newsletter</span></h3>
+									alt="Image" class="img-fluid"></span><span>Participa en la comunidad</span></h3>
 
 						<form id="formu" action="#" class="row g-3">
 							<div class="col-auto">
@@ -509,7 +507,7 @@
 
 			<div class="row g-5 mb-5">
 				<div class="col-lg-4">
-					<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Furni<span>.</span></a></div>
+					<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">VetStop<span>.</span></a></div>
 					<p class="mb-4">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus
 						malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.
 						Pellentesque habitant</p>
