--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				</div>
 				<div class="col-lg-7">
 					<div class="hero-img-wrap">
-						<img src="images/dogs-principal.webp" class="img-fluid">
+						<img src="images/post-1.jpg" class="img-fluid">
 					</div>
 				</div>
 			</div>
