Edited images again

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 				<div class="col-lg-5">
 					<div class="img-wrap">
-						<img src="images/vet.avif" alt="Image" class="img-fluid">
+						<img src="images/img-grid-1.webp" alt="Image" class="img-fluid">
 					</div>
 				</div>
 
@@ -215,9 +215,9 @@
 			<div class="row justify-content-between">
 				<div class="col-lg-7 mb-5 mb-lg-0">
 					<div class="imgs-grid">
-						<div class="grid grid-1"><img src="images/img-grid-1.webp" alt="Untree.co"></div>
+						<div class="grid grid-1"><img src="images/img-grid-3.png" alt="Untree.co"></div>
 						<div class="grid grid-2"><img src="images/img-grid-2.jpg" alt="Untree.co"></div>
-						<div class="grid grid-3"><img src="images/img-grid-3.png" alt="Untree.co"></div>
+						<div class="grid grid-3"><img src="images/img-grid-3.avif" alt="Untree.co"></div>
 					</div>
 				</div>
 				<div class="col-lg-5 ps-lg-5">
