--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="row justify-content-between">
 				<div class="col-lg-5">
 					<div class="intro-excerpt">
-						<h1>Servicios veterinarios<span class="d-block">24/7</span></h1>
+						<h1>Atención veterinaria para sus mascotas <span class="d-block">24/7</span></h1>
 						<p class="mb-4">Proporcionamos un cuidado integral y especializado, asegurando la salud y el
 							bienestar de las mascotas.</p>
 						<p><a href="#servicios" class="btn btn-secondary me-2">Adquirir servicios</a>
@@ -84,7 +84,7 @@
 
 				<!-- Start Column 1 -->
 				<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-					<h2 class="mb-4 section-title">Servicios disponibles</h2>
+					<h2 class="mb-4 section-title">Variedad de servicios disponibles</h2>
 					<p class="mb-4">En nuestra clínica, nos apasiona el bienestar de tus mascotas. Ofrecemos una amplia
 						gama de servicios para asegurarnos de que reciban el mejor cuidado posible.</p>
 
@@ -143,7 +143,7 @@
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-lg-6">
-					<h2 class="section-title">Accesorios</h2>
+					<h2 class="section-title">Tienda de accesorios estéticos</h2>
 					<p>En nuestra tienda para mascotas, ofrecemos una amplia gama de accesorios diseñados para mejorar
 						la calidad de vida de tus compañeros peludos. Aquí hay algunos de nuestros productos destacados
 						y sus beneficios:</p>
@@ -221,7 +221,7 @@
 					</div>
 				</div>
 				<div class="col-lg-5 ps-lg-5">
-					<h2 class="section-title mb-4">Productos</h2>
+					<h2 class="section-title mb-4">Distribuimos productos alimenticios</h2>
 					<p>Purina, NutraPro y Royal Canin son marcas reconocidas en el mercado de alimentos para mascotas,
 						ofreciendo una variedad de productos diseñados para satisfacer las necesidades nutricionales de
 						perros y gatos en diferentes etapas de la vida y con diversas condiciones de salud. Estas marcas
